; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/qib/extr_qib_ruc.c_get_sguid.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/qib/extr_qib_ruc.c_get_sguid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qib_ibport = type { i32* }
%struct.qib_pportdata = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qib_ibport*, i32)* @get_sguid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_sguid(%struct.qib_ibport* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.qib_ibport*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.qib_pportdata*, align 8
  store %struct.qib_ibport* %0, %struct.qib_ibport** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %15, label %9

9:                                                ; preds = %2
  %10 = load %struct.qib_ibport*, %struct.qib_ibport** %4, align 8
  %11 = call %struct.qib_pportdata* @ppd_from_ibp(%struct.qib_ibport* %10)
  store %struct.qib_pportdata* %11, %struct.qib_pportdata** %6, align 8
  %12 = load %struct.qib_pportdata*, %struct.qib_pportdata** %6, align 8
  %13 = getelementptr inbounds %struct.qib_pportdata, %struct.qib_pportdata* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %3, align 4
  br label %24

15:                                               ; preds = %2
  %16 = load %struct.qib_ibport*, %struct.qib_ibport** %4, align 8
  %17 = getelementptr inbounds %struct.qib_ibport, %struct.qib_ibport* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = load i32, i32* %5, align 4
  %20 = sub i32 %19, 1
  %21 = zext i32 %20 to i64
  %22 = getelementptr inbounds i32, i32* %18, i64 %21
  %23 = load i32, i32* %22, align 4
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %15, %9
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local %struct.qib_pportdata* @ppd_from_ibp(%struct.qib_ibport*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
